feat: add pinnable TOC panel and optimize for store
- Add floating pinnable TOC panel with drag functionality
- Include article title in TOC extraction
- Update name to "X & Twitter Article TOC" for SEO
- Use logo.png as extension icon
- Clean up unused code (sidebar, ContentApp)
- Update version to 0.1.0

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "private": true,
   "name": "twitter-toc-extension",
-  "description": "JavaScript-based extension with a sidebar panel. Adds a sidebar with a simple page.",
-  "version": "3.0.0",
+  "description": "Navigate X.com and Twitter.com long-form articles with an interactive table of contents",
+  "version": "0.1.0",
   "license": "MIT",
   "type": "module",
   "author": {
-    "name": "Your Name",
-    "email": "your@email.com",
-    "url": "https://yourwebsite.com"
+    "name": "Aries",
+    "email": "aries0331.dev@email.com",
+    "url": "https://arieszhou.cn"
   },
   "scripts": {
     "dev": "extension dev",
