--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "private": true,
   "name": "twitter-toc-extension",
-  "description": "JavaScript-based extension with a sidebar panel. Adds a sidebar with a simple page.",
-  "version": "3.0.0",
+  "description": "Navigate X.com and Twitter.com long-form articles with an interactive table of contents",
+  "version": "0.1.0",
   "license": "MIT",
   "type": "module",
   "author": {
-    "name": "Your Name",
-    "email": "your@email.com",
-    "url": "https://yourwebsite.com"
+    "name": "Aries",
+    "email": "aries0331.dev@email.com",
+    "url": "https://arieszhou.cn"
   },
   "scripts": {
     "dev": "extension dev",
     "start": "extension start",
     "build": "extension build",
+    "build:zip": "npm run build && cd dist/chromium && zip -r ../../twitter-toc-extension-v$npm_package_version.zip .",
     "build:firefox": "extension build --browser firefox",
     "build:edge": "extension build --browser edge"
   },
